--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author:
   twitter: anidotnet
   #pinterest: asd123
   linkedin: anidotnet
-  bio: Blog of Anindya Chatterjee!
+  bio: blog of anindya chatterjee!
   email_md5: 9c74f9c66df98052bef13864bffcd09c
 
 rss_path: feed.xml
