--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,8 @@ author:
   email: anidotnet@gmail.com
   github: anidotnet
   twitter: anidotnet
-  #pinterest: asd123
   linkedin: anidotnet
-  bio: blog of anindya chatterjee!
+  bio: anindya chatterjee
   email_md5: 9c74f9c66df98052bef13864bffcd09c
 
 rss_path: feed.xml
